# screenreclib

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main2.cpp
.github/workflows/: build.yml  cmake.yml  flawfinder.yml
doc/: config_dox
doc/html/: _qt_recorder__autogen_2moc__predefs_8h_source.html  _s_r_audio_filter_8h_source.html  _s_r_audio_input_8h_source.html  _s_r_decoder_8h_source.html  _s_r_encoder_8h_source.html  _s_r_exceptions_8h_source.html  _s_r_input_8h_source.html  _s_r_media_output_8h_source.html  _s_r_recorder_8h_source.html  _s_r_tools_8h_source.html  _s_r_video_filter_8h_source.html  _s_r_video_input_8h_source.html  annotated.html  class_a_v_codec_allocation_exception.html  class_buffer_allocation_exception-members.html  class_cropper_exception.html  class_device_not_open_exception-members.html  class_device_not_open_exception.html  class_encoder_exception-members.html  class_file_opening_exception.html  class_find_encoder_exception-members.html  class_no_free_stream_exception.html  class_no_valid_streams_exception.html  class_output_header_writing_exception.html  class_qt_recorder-members.html  class_qt_recorder.html  class_s_r_audio_filter-members.html  class_s_r_audio_filter.html  class_s_r_audio_input-members.html  class_s_r_audio_input.html  class_s_r_decoder-members.html  class_s_r_decoder.html  class_s_r_device_dictionary_exception-members.html  class_s_r_device_dictionary_exception.html  class_s_r_encoder-members.html  class_s_r_encoder.html  class_s_r_exception.html  class_s_r_input.html  class_s_r_media_output-members.html  class_s_r_media_output.html  (+63 more)
doc/latex/: _q_t_example_app__autogen_2include_2ui__qtrecorder_8h_source.tex  _q_t_example_app__autogen_2moc__predefs_8h_source.tex  _qt_recorder__autogen_2include_2ui__qtrecorder_8h_source.tex  _s_r_audio_filter_8h_source.tex  _s_r_decoder_8h_source.tex  _s_r_encoder_8h_source.tex  _s_r_exceptions_8h_source.tex  _s_r_input_8h_source.tex  _s_r_media_output_8h_source.tex  _s_r_recorder_8h_source.tex  _s_r_tools_8h_source.tex  _s_r_video_filter_8h_source.tex  _s_r_video_input_8h_source.tex  annotated.tex  class_buffer_allocation_exception.eps  class_configuration_parser_exception.eps  class_cropper_exception.eps  class_cropper_exception.tex  class_decoder_exception.eps  class_device_not_open_exception.eps  class_device_not_open_exception.tex  class_encoder_exception.eps  class_file_opening_exception.tex  class_find_encoder_exception.eps  class_invalid_filter_parameters_exception.tex  class_no_valid_streams_exception.eps  class_no_valid_streams_exception.tex  class_output_context_allocation_exception.eps  class_output_header_writing_exception.tex  class_qt_recorder.tex  class_s_r_audio_filter.tex  class_s_r_audio_input.tex  class_s_r_decoder.tex  class_s_r_device_dictionary_exception.eps  class_s_r_device_dictionary_exception.tex  class_s_r_device_exception.tex  class_s_r_encoder.tex  class_s_r_exception.eps  class_s_r_exception.tex  class_s_r_filter_exception.eps  (+39 more)
docs/: _q_t_example_app__autogen_2include_2ui__qtrecorder_8h_source.html  _qt_recorder__autogen_2include_2ui__qtrecorder_8h_source.html  _s_r_decoder_8h_source.html  _s_r_video_input_8h_source.html  class_buffer_allocation_exception.html  class_codec_opening_exception.html  class_cropper_exception-members.html  class_decoder_exception-members.html  class_file_opening_exception-members.html  class_invalid_filter_parameters_exception-members.html  class_no_free_stream_exception-members.html  class_no_valid_streams_exception-members.html  class_output_context_allocation_exception.html  class_output_format_exception-members.html  class_output_format_exception.html  class_s_r_audio_filter.html  class_s_r_decoder-members.html  class_s_r_device_exception-members.html  class_s_r_device_exception.html  class_s_r_encoder-members.html  class_s_r_encoder.html  class_s_r_filter_exception-members.html  class_s_r_null_frame_exception-members.html  class_s_r_video_filter.html  class_stream_exception-members.html  class_stream_exception.html  class_ui_1_1_qt_recorder.html  class_ui___qt_recorder-members.html  class_uninitialized_filter_exception-members.html  classfind_decoder_exception-members.html  classfind_decoder_exception.html  classopen_source_exception.html  classopen_source_parameter_exception.html  classstream_index_exception.html  dir_06ec884a0825782b323e4577406ae7aa.html  dir_2254ed4c86842eb07fcb8e0eac2ef2c8.html  dir_22771cf7427754db8a77d852e3e48e28.html  dir_4c6b99e0b10555c7275f0fb583177a6f.html  dir_9dab80f1f8196c2b40542990db59baa3.html  dir_cb8aebdcbcd7898634ff25bad2892a2f.html  (+15 more)
docs/search/: all_0.js  all_5.js  all_7.js  all_8.js  all_b.js  classes_1.js  classes_3.js  classes_9.js  classes_c.js  classes_f.js  functions_2.js  functions_9.js
doxygen/html/: _q_t_example_app__autogen_2moc__predefs_8h_source.html  _s_r_audio_filter_8h_source.html  _s_r_encoder_8h_source.html  _s_r_exceptions_8h_source.html  (+43 more)
example/: simple_main.cpp
example/QtRecorder/: CMakeLists.txt  main.cpp  qtrecorder.cpp  qtrecorder.h  qtrecorder.ui
example/SimpleMain/: CMakeLists.txt  main.cpp
exceptions/: exceptions.h
include/: SCPPAudioDecoder.h  SCPPAudioInput.h  SCPPAudioTranscoder.h  SCPPDecoder.h  SCPPEncoder.h  SCPPInput.h  SCPPMediaMuxer.h  SCPPMediaOutput.h  SCPPRecorder.h  SCPPTranscoder.h  SCPPVideoDecoder.h  SCPPVideoInput.h  SCPPVideoTranscoder.h  SCPPtools.h  SRMediaOutput.h  SRRecorder.h  SRTools.h  SRVideoInput.h
lib/: SRAudioFilter.cpp  SRAudioInput.cpp  SRDecoder.cpp  SREncoder.cpp  SRInput.cpp  SRMediaOutput.cpp  SRRecorder.cpp  SRTranscoder.cpp  SRVideoDecoder.cpp  SRVideoFilter.cpp  SRVideoInput.cpp
src/: SCPPAudioEncoder.cpp  SCPPAudioInput.cpp  SCPPAudioTranscoder.cpp  SCPPDecoder.cpp  SCPPEncoder.cpp  SCPPMediaMuxer.cpp  SCPPMediaOutput.cpp  SCPPRecorder.cpp  SCPPTranscoder.cpp  SCPPVideoDecoder.cpp  SCPPVideoInput.cpp  SCPPVideoTranscoder.cpp  SCPPinput.cpp  SRAudioFilter.cpp  SRAudioInput.cpp  SRDecoder.cpp  SREncoder.cpp  SRInput.cpp  SRMediaOutput.cpp  SRRecorder.cpp  SRTranscoder.cpp  SRVideoFilter.cpp  SRVideoInput.cpp
(+104 files in other folders)
